# ai-hedge-fund

./: .dockerignore  .env.example  .env.railway  .gitconfig  .gitignore  .pre-commit-config.yaml  .tenx.ron  AGENTS.md  AKSHARE_HK_ENHANCEMENT.md  API集成快速参考.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMPARISON.md  BRAND.md  BROWSER_TEST.md  BUG修复说明.md  BURNRATE.md  CACHE_ENHANCEMENT_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS_AND_SETUP_GUIDE.md  CODE_OF_CONDUCT.md  COMPLETE_FIX_SUMMARY.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Comprehensive_UI_Design_Document.md  DATA.md  DATA_INSUFFICIENT_ANALYSIS.md  DEXTER_INTEGRATION.md  DOCUMENTATION_SUMMARY.md  Dockerfile  FINAL_FIX_SUMMARY.md  FINAL_REPORT.md  FIX_COMPLETE.md  FOREIGN_KEY_REMOVAL_EXECUTION.md  FOREIGN_KEY_REMOVAL_SUMMARY.md  HK_NEWS_IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  (+109 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
alembic/: env.py
algorithms_demo/: ALGORITHMS_SUMMARY.md  README.md  fundamentals_demo.py  run_all_demos.py  technical_analysis_demo.py  valuation_demo.py  warren_buffett_demo.py
algorithms_test/: my_algo.py
app/: Dockerfile  README.md  WEB_APP_SETUP_REPORT.md  backend.Dockerfile  dev.bat  dev.sh  docker-compose.yml  docker-entrypoint.sh  frontend.Dockerfile  run.bat  run.sh  simple-ui.html  stop.sh
autoresearch/: ARR.md  CRYPTO.md  README.md  RENKO.md  RUNBOOK.md  backtest_crypto_rotation.py  backtest_regime.py  backtest_worldmonitor_ab.py  cache_crypto.py  cache_events.py  cache_fundamentals.py  cache_macro.py  cache_signals.py  cache_worldmonitor.py  cache_worldmonitor_signals.py  cross_asset_check.py  crypto_metrics.py  crypto_relative_strength.py  daily_config.json  evaluate.py  factors.py  fast_backtest.py  health_check.py  oos_check.py  paper_trading.py  params.py  params_eda.py  params_energy.py  params_equipment.py  params_foundry.py  params_healthcare.py  params_hl_hip3_sleeve.py  params_memory.py  params_networking.py  params_photonics.py  params_platform.py  params_power.py  params_power_infra.py  params_tastytrade_sleeve.py  params_tech.py  (+50 more)
charts/: README.md
config/: models.yaml
configs/: agent_cli_current_positions.example.json  agent_cli_fills.example.json  agent_cli_reference_prices.example.json  agent_cli_symbol_map.example.json
contracts/: foundry.toml
docker/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  run.bat  run.sh  worker.Dockerfile
docs/: ANTI_RATE_LIMIT.md  ANTI_RATE_LIMIT_SUMMARY.md  CACHE_ARCHITECTURE.md  DATABASE_QUERY_GUIDE.md  DATA_SOURCE_RATE_LIMITING.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_ORGANIZATION_REPORT.md  EXECUTION_SUMMARY.md  FIXES_HISTORY.md  FOREIGN_KEY_REMOVAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  LOGGING_OPTIMIZATION.md  LOG_ENHANCEMENT.md  MONITORING_AND_CONFIG.md  MULTI_SOURCE_GUIDE.md  MYSQL_CACHE_IMPLEMENTATION.md  PLAN-WORLDMONITOR-INTEGRATION.md  PRD-DEXTER-AI-HEDGE-FUND-INTEGRATION.md  PRD-NORTH-STAR-DEXTER-SECOND-OPINION-SUBSTACK.md  PROJECT_CLEANUP_SUMMARY.md  README.md  README_CN.md  TEST_GUIDE.md  TEST_NAMING_CONVENTIONS.md  TEST_OPTIMIZATION_SUMMARY.md  TUSHARE_SETUP.md  YFINANCE_DISABLED.md  automation.md  blockchain_timeline.json  blockchain_timeline.md  chatgpt_subscription.md  data-source-analysis.md  data_providers.md  database_quick_reference.md  database_schema.md  deployment.md  e2e_test_report.md  enhanced-features-guide-template.md  enhanced-features-guide.md  huong_dan_vi.md  (+10 more)
examples/: cache_demo.py  example_usage.py  monitoring_example.py  multi_source_demo.py  portfolio_risk_dashboard.py  portfolio_week_simulation.py
infra/: README.md
integrations/: README.md  __init__.py
memory-bank/: AI_HEDGE_FUND_SCREENING_SYSTEM_COMPLETE.md  activeContext.md  architectureBreakdown.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
next-frontend/: package-lock.json  package.json
notes/: Level-1.md  Level-2.md  Level-3.md  TBD.md  TOUR.md  业务逻辑.md
plans/: insider_edgar_dashboard_plan.md  openinsider_subpage_plan.md  research_insider_edgar_dashboard.md  research_openinsider_subpage.md  research_thirteenf_redesign.md  research_thirteenf_ui_improvements.md  research_web_scraping.md  thirteenf_redesign_plan.md  thirteenf_ui_improvements_plan.md  web_scraping_feature_plan.md
reports/: analysis-20260310-011716-iren.md  analysis-20260313-122140-amat-asml.md
scripts/: README.md  add_database_comments.py  agent_cli_handoff_executor.py  agent_cli_pipeline.py  agent_cli_reconcile_fills.py  aihf_agent_cli_bridge.py  analyze.sh  day_review.py  dexter_second_opinion_client.py  diagnose_financial_metrics.py  install-autostart.bat  integration_test.sh  monitor_progress.py  release.sh  run_backtest_603444.py  second_opinion_to_substack_outline.py  strategist-start.bat  strategist-stop.bat  uninstall-autostart.bat  validate_sql_comments.py
server/: __init__.py  config.py  log_config.py  main.py  schemas.py
src/: CLAUDE.md  __init__.py  _entrypoint.py  agents.py  api.py  backtester.py  backtester.rs  compliance.py  config.py  dashboard.py  gradio_app.py  lib.rs  lmstudio_utils.py  main.py  main.rs  main_with_portfolio.py  ollama_utils.py  retry_utils.py  scheduler.py  stocks_from_db.py  tools.py  trader.py  workflow.rs
tests/: CLAUDE.md  __init__.py  conftest.py  mod.rs  test_adanos_sentiment.py  test_akshare_market_cap_tushare.py  test_akshare_metrics_valuation.py  test_akshare_prices_failover.py  test_akshare_retry.py  test_akshare_spot_dedup.py  test_api.py  test_api_dedup.py  test_api_efinance.py  test_api_multi_year.py  test_api_rate_limiting.py  test_api_rate_limiting.rs  test_api_session.py  test_api_tushare.py  test_api_yfinance.py  test_ashare_api_smoke.py  test_ashare_backtester_rules.py  test_atlascloud_provider.py  test_backtest_fixes.py  test_backtest_service.py  test_backtester.py  test_cache.py  test_cache.rs  test_cache_ttl.py  test_cli_model_selection.py  test_cli_ticker_alias.py  test_consensus.py  (+44 more)
(+1330 files in other folders)
