[package]
name = "open-hedge"
version = "0.1.0"
edition = "2021"
description = "Parallel Rust skeleton for Open Hedge simulator"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "json", "chrono"] }
tokio-stream = "0.1"
futures-util = "0.3"
yahoo-finance-rs = "0.1.2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
keyring = "3"
url = "2"


[lib]
name = "ai_hedge_fund"
path = "src/lib.rs"

[[bin]]
name = "ai-hedge-fund"
path = "src/main.rs"

[[bin]]
name = "backtester"
path = "src/backtester.rs"

[[bin]]
name = "app-backend"
path = "app/backend/main.rs"

[[bin]]
name = "v2-backtesting"
path = "v2/backtesting/__main__.rs"

[[bin]]
name = "v2-event-study"
path = "v2/event_study/__main__.rs"
