[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "ai_hedge_fund", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "0.1.0"
langchain-openai = "0.0.2"
langgraph = "0.0.11"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-dotenv = "1.0.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
hedge-fund = "ai_hedge_fund.run_hedge_fund:main"
backtester = "ai_hedge_fund.run_backtest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"