[project]
name = "ai-hedge-fund"
version = "0.1.0"
description = "AI-powered hedge fund using a LangGraph multi-agent workflow, with a FastAPI web service in front."
authors = [{ name = "ltmas", email = "ltmaseko7@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # --- Existing CLI / agents stack ----------------------------------------
    # Pinned tight per ADR-005 (defer LangChain 1.x migration to F1.5).
    "langchain==0.3.0",
    "langchain-anthropic==0.3.5",
    "langchain-groq==0.2.3",
    "langchain-openai>=0.3.5",
    "langchain-deepseek>=0.1.2",
    "langchain-google-genai>=2.0.11",
    "langchain-ollama>=0.2.0",  # added upstream: Ollama local-model support
    "langgraph==0.2.56",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",  # langchain 0.3.0 pins numpy <2.0 (ADR-005; upgrade when LangChain migrates)
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "tabulate>=0.9",
    "colorama>=0.4",
    "questionary>=2.1",
    "rich>=13.9",

    # Explicit declaration of transitive dep — A10d fix.
    "requests>=2.32",

    # --- F1 server stack (our additions) ------------------------------------
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.1",
    "sqlmodel>=0.0.21",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=25.1",
    "tenacity>=8.4,<9.0",  # langchain 0.3.0 pins tenacity <9.0 (ADR-005)
    "httpx>=0.27",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.13",
    "types-requests>=2.32",
    "respx>=0.21",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "server", "app"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "server", "tests", "app"]
extend-exclude = ["alembic/versions", "app/backend/alembic/versions"]

[tool.ruff.lint]
# E,W: pycodestyle. F: pyflakes. I: isort. UP: pyupgrade. B: flake8-bugbear.
# SIM: simplify. C4: comprehensions. RET: return. TCH: type-checking.
# A: builtins. ARG: unused args. PT: pytest-style. T20: print-detection.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RET", "TCH", "A", "ARG", "PT"]
ignore = [
    "E501",  # ruff format owns line length
    "B008",  # FastAPI uses Depends() in defaults, that's idiomatic.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PT", "TC"]
"alembic/**" = ["E", "F", "I"]
"app/backend/alembic/**" = ["E", "F", "I"]
# sys.path must be mutated before bare-module imports from src/ can resolve.
"server/api/reference.py" = ["E402"]
"server/services/run_service.py" = ["E402"]
"server/services/streaming.py" = ["E402"]
# Pre-existing src/ issues — tracked as tech-debt (A7, A17a findings); fix
# incrementally rather than in one sweep that risks breaking the CLI agents.
"src/**/*.py" = ["W293", "W291", "ARG", "F841", "SIM", "RET", "C4", "C419", "B006", "B007", "B904", "UP", "E721", "E722", "E402"]
# app/backend uses its own conventions (upstream code).
"app/**/*.py" = ["ARG", "F841", "SIM", "RET", "C4", "B", "UP", "E721", "E712", "E722", "T20", "TCH"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = false
files = ["server"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false  # tighten module-by-module

[[tool.mypy.overrides]]
module = ["server.config", "server.db.*", "server.schemas"]
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::DeprecationWarning:passlib.*",
]
